--- a/Aula_01.ipynb
+++ b/Aula_01.ipynb
@@ -2068,6 +2068,35 @@
    "source": [
     "**Resposta** 2082 casas tem mais de 300 m2 de sala e masi de  2 banheiros"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "complimentary-aquatic",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df['price'] > 3000000) & (df['bathrooms'] > 2)] . shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "valid-investment",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
