--- a/TESTE_COMM_PYTHON.ipynb
+++ b/TESTE_COMM_PYTHON.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "narrow-costume",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 30,
    "id": "formal-subscriber",
    "metadata": {
     "scrolled": true
@@ -221,7 +221,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 48,
    "id": "perfect-worth",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "id": "ancient-spider",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "4      1987          1987"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "id": "upper-pharmacology",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 34,
    "id": "qualified-enough",
    "metadata": {},
    "outputs": [
@@ -404,60 +404,159 @@
        "4 1987-01-01   1987-01-01"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['yr_built','yr_renovated']].head()"
+    "df[['yr_built','yr_renovated']].head()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "banned-aging",
+   "execution_count": 35,
+   "id": "adjustable-spectacular",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use o ex abaixo para contar a diferena de tempo entre datas 'Y' nesse caso conta em years.\n",
+    "\n",
+    "df['yr_to_renov'] = df['yr_renovated'] - df['yr_built']\n",
+    "\n",
+    "df['yr_to_renov'] =df['yr_to_renov']/np.timedelta64(1,'Y')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "circular-produce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('1900-01-01 00:00:00')"
+       "id                        int64\n",
+       "date                     object\n",
+       "price                   float64\n",
+       "bedrooms                  int64\n",
+       "bathrooms               float64\n",
+       "sqft_living               int64\n",
+       "sqft_lot                  int64\n",
+       "floors                  float64\n",
+       "waterfront                int64\n",
+       "view                      int64\n",
+       "condition                 int64\n",
+       "grade                     int64\n",
+       "sqft_above                int64\n",
+       "sqft_basement             int64\n",
+       "yr_built         datetime64[ns]\n",
+       "yr_renovated     datetime64[ns]\n",
+       "zipcode                   int64\n",
+       "lat                     float64\n",
+       "long                    float64\n",
+       "sqft_living15             int64\n",
+       "sqft_lot15                int64\n",
+       "yr_to_renov               int64\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['yr_renovated'].min()"
+    "#df['yr_to_renov'].astype(int64)\n",
+    "\n",
+    "#df['yr_to_renov'].astype(int64, copy=True, errors='raise')\n",
+    "df.astype({'yr_to_renov': 'int64'}).dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "adjustable-spectacular",
+   "execution_count": 46,
+   "id": "naval-entity",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Cannot convert input [0       1955-01-01\n1       1951-01-01\n2       1933-01-01\n3       1965-01-01\n4       1987-01-01\n           ...    \n21608   2009-01-01\n21609   2014-01-01\n21610   2009-01-01\n21611   2004-01-01\n21612   2008-01-01\nName: yr_built, Length: 21613, dtype: datetime64[ns]] of type <class 'pandas.core.series.Series'> to Timestamp",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-100-afc75d85a656>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'refor_year'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate_range\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'yr_built'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'yr_renovated'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfreq\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Y'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\.conda\\envs\\House_Rocket_Sales\\lib\\site-packages\\pandas\\core\\indexes\\datetimes.py\u001b[0m in \u001b[0;36mdate_range\u001b[1;34m(start, end, periods, freq, tz, normalize, name, closed, **kwargs)\u001b[0m\n\u001b[0;32m   1067\u001b[0m         \u001b[0mfreq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"D\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1068\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1069\u001b[1;33m     dtarr = DatetimeArray._generate_range(\n\u001b[0m\u001b[0;32m   1070\u001b[0m         \u001b[0mstart\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1071\u001b[0m         \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.conda\\envs\\House_Rocket_Sales\\lib\\site-packages\\pandas\\core\\arrays\\datetimes.py\u001b[0m in \u001b[0;36m_generate_range\u001b[1;34m(cls, start, end, periods, freq, tz, normalize, ambiguous, nonexistent, closed)\u001b[0m\n\u001b[0;32m    378\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    379\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mstart\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 380\u001b[1;33m             \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTimestamp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    381\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    382\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\tslibs\\timestamps.pyx\u001b[0m in \u001b[0;36mpandas._libs.tslibs.timestamps.Timestamp.__new__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\tslibs\\conversion.pyx\u001b[0m in \u001b[0;36mpandas._libs.tslibs.conversion.convert_to_tsobject\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: Cannot convert input [0       1955-01-01\n1       1951-01-01\n2       1933-01-01\n3       1965-01-01\n4       1987-01-01\n           ...    \n21608   2009-01-01\n21609   2014-01-01\n21610   2009-01-01\n21611   2004-01-01\n21612   2008-01-01\nName: yr_built, Length: 21613, dtype: datetime64[ns]] of type <class 'pandas.core.series.Series'> to Timestamp"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>yr_renovated</th>\n",
+       "      <th>yr_to_renov</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1955-01-01</td>\n",
+       "      <td>1955-01-01</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1951-01-01</td>\n",
+       "      <td>1991-01-01</td>\n",
+       "      <td>40.000821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1933-01-01</td>\n",
+       "      <td>1933-01-01</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1965-01-01</td>\n",
+       "      <td>1965-01-01</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1987-01-01</td>\n",
+       "      <td>1987-01-01</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    yr_built yr_renovated  yr_to_renov\n",
+       "0 1955-01-01   1955-01-01     0.000000\n",
+       "1 1951-01-01   1991-01-01    40.000821\n",
+       "2 1933-01-01   1933-01-01     0.000000\n",
+       "3 1965-01-01   1965-01-01     0.000000\n",
+       "4 1987-01-01   1987-01-01     0.000000"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['refor_year']= pd.date_range(df['yr_built'], df['yr_renovated'], freq='Y')"
+    "df[['yr_built','yr_renovated','yr_to_renov']].head()"
    ]
   },
   {
@@ -474,13 +573,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 47,
    "id": "floppy-saint",
    "metadata": {},
    "outputs": [],
    "source": [
     "# use o np.where para fazer update na coluna 'yr_renovated' onde for 0 preenche com o valor da coluna 'yr_built'.\n",
-    "#df['yr_renovated'] = np.where(df['yr_renovated'] == 0, df['yr_built'], df['yr_renovated'] )\n"
+    "df['yr_renovated'] = np.where(df['yr_renovated'] == 0, df['yr_built'], df['yr_renovated'] )\n"
    ]
   },
   {
@@ -131631,10 +131730,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "resistant-savage",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'DatetimeIndex' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-39211141e425>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbdate_range\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'1/1/2018'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'1/08/2018'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m DatetimeIndex(['2018-01-01', '2018-01-02', '2018-01-03', '2018-01-04',\n\u001b[0m\u001b[0;32m      3\u001b[0m            '2018-01-05', '2018-01-08'],\n\u001b[0;32m      4\u001b[0m           dtype='datetime64[ns]', freq='B')\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'DatetimeIndex' is not defined"
+     ]
+    }
+   ],
    "source": []
   },
   {
